--- a/bform.html
+++ b/bform.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Booking Form</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body>
   <div class="container">
@@ -13,60 +13,60 @@
       <div class="card-body">
         <h5 class="card-title">Passenger Information</h5>
         <form id="bookingForm">
-          <div class="form-row">
-            <div class="form-group col-md-6">
+          <div class="row">
+            <div class="col-md-6 col-form-label">
               <label for="firstName">First Name</label>
-              <input type="text" class="form-control" id="firstName" placeholder="Enter first name" required>
+              <input type="text" class="form-control col-form-label" id="firstName" placeholder="Enter first name" required>
             </div>
-            <div class="form-group col-md-6">
+            <div class="col-md-6">
               <label for="lastName">Last Name</label>
-              <input type="text" class="form-control" id="lastName" placeholder="Enter last name" required>
+              <input type="text" class="form-control col-form-label" id="lastName" placeholder="Enter last name" required>
             </div>
           </div>
-          <div class="form-row">
-            <div class="form-group col-md-6">
+          <div class="row">
+            <div class="col-md-6">
               <label for="email">Email</label>
-              <input type="email" class="form-control" id="email" placeholder="Enter email" required>
+              <input type="email" class="form-control col-form-label" id="email" placeholder="Enter email" required>
             </div>
-            <div class="form-group col-md-6">
+            <div class=" col-md-6">
               <label for="phone">Phone Number</label>
-              <input type="tel" class="form-control" id="phone" placeholder="Enter phone number" required>
+              <input type="tel" class="form-control col-form-label" id="phone" placeholder="Enter phone number" required>
             </div>
           </div>
           <hr>
           <h5 class="card-title">Address Information</h5>
-          <div class="form-group">
+          <div class="col-form-label">
             <label for="address">Address</label>
-            <input type="text" class="form-control" id="address" placeholder="Enter address" required>
+            <input type="text" class="form-control col-form-label" id="address" placeholder="Enter address" required>
           </div>
-          <div class="form-row">
-            <div class="form-group col-md-6">
+          <div class="row">
+            <div class="col-md-6">
               <label for="city">City</label>
               <input type="text" class="form-control" id="city" placeholder="Enter city" required>
             </div>
-            <div class="form-group col-md-4">
+            <div class=" col-md-4">
               <label for="state">State</label>
               <input type="text" class="form-control" id="state" placeholder="Enter state" required>
             </div>
-            <div class="form-group col-md-2">
+            <div class=" col-md-2">
               <label for="zip">Zip</label>
               <input type="text" class="form-control" id="zip" placeholder="Enter zip code" required>
             </div>
           </div>
           <hr>
           <h5 class="card-title">Payment Information</h5>
-          <div class="form-row">
-            <div class="form-group col-md-6">
+          <div class="row">
+            <div class=" col-md-6 col-form-label">
               <label for="cardNumber">Card Number</label>
               <input type="text" class="form-control" id="cardNumber" placeholder="Enter card number" required>
             </div>
-            <div class="form-group col-md-6">
+            <div class="col-md-6">
               <label for="expiryDate">Expiry Date</label>
               <input type="text" class="form-control" id="expiryDate" placeholder="MM/YY" required>
             </div>
           </div>
-          <div class="form-row">
-            <div class="form-group col-md-6">
+          <div class="row">
+            <div class="col-md-6">
               <label for="cvv">CVV</label>
               <input type="text" class="form-control" id="cvv" placeholder="Enter CVV" required>
             </div>
