--- a/f_search.html
+++ b/f_search.html
@@ -1,56 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Flight Search</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-</head>
-<body>
-  <div class="container">
-    <h1 class="mt-5 mb-4">Flight Search</h1>
-    <div class="row">
-      <div class="col-md-6">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Search Flights</h5>
-            <form>
-              <div class="form-group">
-                <label for="from">From:</label>
-                <input type="text" class="form-control" id="from" placeholder="Enter origin">
-              </div>
-              <div class="form-group">
-                <label for="to">To:</label>
-                <input type="text" class="form-control" id="to" placeholder="Enter destination">
-              </div>
-              <div class="form-group">
-                <label for="departure">Departure Date:</label>
-                <input type="date" class="form-control" id="departure">
-              </div>
-              <div class="form-group">
-                <label for="return">Return Date:</label>
-                <input type="date" class="form-control" id="return">
-              </div>
-              <td><a href="fresult.html" class="btn btn-primary">Search Flight</a></td>
-            </form>
-          </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Flight Search</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="stylee.css">
+  </head>
+  <body class="bg-black">
+    <!-- -------------navbar--------- -->
+    <nav
+      class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark"
+    >
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">besttravel01</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Search</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Result</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Form</a>
+            </li>
+            <!-- <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li> -->
+            <!-- <li class="nav-item">
+            <a class="nav-link disabled" aria-disabled="true">disabled</a>
+          </li> -->
+          </ul>
+          <form class="d-flex" role="search">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+            />
+            <button class="btn btn-outline-success" type="submit">
+              Search
+            </button>
+          </form>
         </div>
       </div>
-      <div class="col-md-6">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Popular Destinations</h5>
-            <ul class="list-group">
-              <li class="list-group-item">California</li>
-              <li class="list-group-item">London</li>
-              <li class="list-group-item">Paris</li>
-              <li class="list-group-item">Tokyo</li>
-              <li class="list-group-item">Dubai</li>
-            </ul>
+    </nav>
+    <!-- ----------navbar end ----- -->
+
+    <!-- ------caroulsel------- -->
+    
+    <!-- -------end caroulsel------  -->
+
+    <!-- -----------------search form-------- -->
+    <div class="card text-bg-dark">
+      <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div style="position: relative;">
+              <img src="a.jpg" class="d-block" style="width: 100%; height: 684px; object-fit: cover;" data-bs-interval="700">
+              <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.5);"></div>
+            </div>
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Jakarta</h5>
+              <p>Indonesia</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div style="position: relative;">
+            <img src="b.jpg" class="d-block w-20" style="width: 100%; height: 684px; object-fit: cover;" data-bs-interval="700">
+            <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.5);"></div>
+            </div>
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Kuala Lumpur</h5>
+              <p>Malaysia</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div style="position: relative;">
+            <img src="c.jpg" class="d-block w-20" style="width: 100%; height: 684px; object-fit: cover;" data-bs-interval="700">
+            <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.5);"></div>
+          </div>
+          <div class="carousel-caption d-none d-md-block">
+            <h5>China town</h5>
+            <p>Singapore</p>
+          </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      <div class="card-img-overlay">
+        <div class="container">
+          <div class="mt-5 row d-flex justify-content-center align-items-center">
+            <div class="mt-5 col col-lg-3"><h1 class="mt-5" style="color: white;">Free Flight Ticket only for students</h1></div>
+            <div class="col col-lg-3"></div>
+            <div class="col col-lg-3">
+
+                  <form>
+                    <div class="col-form-label">
+                      <label for="from">From:</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="from"
+                        placeholder="Enter origin"
+                      />
+                    </div>
+                    <div class="col-form-label">
+                      <label for="to">To:</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="to"
+                        placeholder="Enter destination"
+                      />
+                    </div>
+                    <div class="col-form-label">
+                      <label for="departure">Departure Date:</label>
+                      <input type="date" class="form-control" id="departure" />
+                    </div>
+                    <div class="col-form-label">
+                      <label for="return">Return Date:</label>
+                      <input type="date" class="form-control" id="return" />
+                    </div>
+                    <td>
+                      <a href="fresult.html" class="mt-3 btn btn-primary d-flex align-items-center justify-content-center"
+                        >Search Flight</a
+                      >
+                    </td>
+                  </form>
+                </div>
+                
           </div>
         </div>
       </div>
     </div>
-  </div>
-</body>
+    <!-- ---------searcb end------- -->
+
+
+
+
+  </body>
+  
 </html>
