--- a/fresult.html
+++ b/fresult.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flight Result</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
   <div class="container">
@@ -58,7 +58,7 @@
           <div class="card-body">
             <h5 class="card-title">Filters</h5>
             <!-- Add filters here -->
-            <div class="form-group">
+            <div class="col-form-label">
               <label for="filterAirline">Airline:</label>
               <select class="form-control" id="filterAirline">
                 <option>All Airlines</option>
@@ -68,7 +68,7 @@
                 <!-- Add more options if needed -->
               </select>
             </div>
-            <div class="form-group">
+            <div class="col-form-label">
               <label for="filterPrice">Price Range:</label>
               <input type="range" class="form-control-range" id="filterPrice" min="0" max="1000" step="50">
             </div>
