--- a/bform.html
+++ b/bform.html
@@ -4,9 +4,65 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Booking Form</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="stylee.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
-<body>
+<body class="bg-dark">
+       <!-- -------------navbar--------- -->
+    <nav
+    class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark"
+  >
+    <div class="container-fluid">
+      <a class="navbar-brand text-primary text-bold" href="#"> <i class="bi bi-airplane-engines-fill"></i> besttravel01</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-lg-0">
+          <li class="nav-item ms-4">
+            <a class="nav-link" href="f_search.html"><i class="bi bi-binoculars"></i> Search</a>
+          </li>
+          <li class="nav-item ms-4">
+            <a class="nav-link" href="fresult.html"><i class="bi bi-suitcase-lg"></i> Result</a>
+          </li>
+          <li class="nav-item ms-4">
+            <a class="nav-link active" aria-current="page" href="bform.html"><i class="bi bi-ui-checks"></i> Form</a>
+          </li>
+          <!-- <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li> -->
+          <!-- <li class="nav-item">
+          <a class="nav-link disabled" aria-disabled="true">disabled</a>
+        </li> -->
+        </ul>
+        <form class="d-flex" role="search">
+          <div class="input-group">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Favorite places"
+              aria-label="Search"
+            />
+            <button class="btn btn-outline-primary" type="submit">
+              <i class="bi bi-search"></i> Find
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </nav>
+  <!-- ----------navbar end ----- -->
+
   <div class="container">
     <h1 class="mt-5 mb-4">Booking Form</h1>
     <div class="card">
@@ -94,6 +150,7 @@
         document.getElementById("confirmationMessage").style.display = "block";
       }, 1000); // Simulating a delay for demonstration purposes
     });
+    
   </script>
 </body>
 </html>
