--- a/fresult.html
+++ b/fresult.html
@@ -5,17 +5,71 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flight Result</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="stylee.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
-<body>
-  <div class="container">
-    <h1 class="mt-5 mb-4">Flight Results</h1>
+<body class="bg-black">
+    <!-- -------------navbar--------- -->
+    <nav
+      class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark"
+    >
+      <div class="container-fluid">
+        <a class="navbar-brand text-primary text-bold" href="#"> <i class="bi bi-airplane-engines-fill"></i> besttravel01</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-lg-0">
+            <li class="nav-item ms-4">
+              <a class="nav-link" href="f_search.html"><i class="bi bi-binoculars"></i> Search</a>
+            </li>
+            <li class="nav-item ms-4">
+              <a class="nav-link active" aria-current="page" href="fresult.html"><i class="bi bi-suitcase-lg"></i> Result</a>
+            </li>
+            <li class="nav-item ms-4">
+              <a class="nav-link" href="bform.html"><i class="bi bi-ui-checks"></i> Form</a>
+            </li>
+            <!-- <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li> -->
+            <!-- <li class="nav-item">
+            <a class="nav-link disabled" aria-disabled="true">disabled</a>
+          </li> -->
+          </ul>
+          <form class="d-flex" role="search">
+            <div class="input-group">
+              <input
+                class="form-control me-2"
+                type="search"
+                placeholder="Favorite places"
+                aria-label="Search"
+              />
+              <button class="btn btn-outline-primary" type="submit">
+                <i class="bi bi-search"></i> Find
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </nav>
+    <!-- ----------navbar end ----- -->
+  <div class="container ">
+    <h1 class="mt-5 mb-4 text-light">Available Flight</h1>
     <div class="row">
       <div class="col-md-8">
-        <div class="card">
+        <div class="card text-bg-dark">
           <div class="card-body">
-            <h5 class="card-title">Available Flights</h5>
             <div class="table-responsive">
-              <table class="table">
+              <table class="table table-dark">
                 <thead>
                   <tr>
                     <th>Flight</th>
@@ -31,21 +85,21 @@
                     <td>09:00 AM</td>
                     <td>12:00 PM</td>
                     <td>Rp. 15.750.000</td>
-                    <td><a href="bform.html" class="btn btn-primary">Book Now</a></td>
+                    <td><button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Book Now</button></td>
                   </tr>
                   <tr>
                     <td>Emirates</td>
                     <td>13:00 AM</td>
                     <td>16:00 PM</td>
                     <td>Rp. 11.500.000</td>
-                    <td><a href="bform.html" class="btn btn-primary">Book Now</a></td>
+                    <td><button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Book Now</button></td>
                   </tr>
                   <tr>
                     <td>Qatar Airways</td>
                     <td>17:00 AM</td>
                     <td>20:00 PM</td>
                     <td>Rp. 8.900.000</td>
-                    <td><a href="bform.html" class="btn btn-primary">Book Now</a></td>
+                    <td><button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Book Now</button></td>
                   </tr>
                 </tbody>
               </table>
@@ -53,6 +107,12 @@
           </div>
         </div>
       </div>
+
+
+
+
+
+
       <div class="col-md-4">
         <div class="card">
           <div class="card-body">
@@ -77,5 +137,113 @@
       </div>
     </div>
   </div>
+
+
+
+  <!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content text-bg-dark">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Booking Form</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="container">
+              <form id="bookingForm">
+                <div class="row">
+                  <div class="col-md-6 col-form-label">
+                    <label for="firstName">First Name</label>
+                    <input type="text" class="form-control col-form-label" id="firstName" placeholder="Enter first name" required>
+                  </div>
+                  <div class="col-md-6">
+                    <label for="lastName">Last Name</label>
+                    <input type="text" class="form-control col-form-label" id="lastName" placeholder="Enter last name" required>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-6">
+                    <label for="email">Email</label>
+                    <input type="email" class="form-control col-form-label" id="email" placeholder="Enter email" required>
+                  </div>
+                  <div class=" col-md-6">
+                    <label for="phone">Phone Number</label>
+                    <input type="tel" class="form-control col-form-label" id="phone" placeholder="Enter phone number" required>
+                  </div>
+                </div>
+                <hr>
+                <div class="col-form-label">
+                  <label for="address">Address</label>
+                  <input type="text" class="form-control col-form-label" id="address" placeholder="Enter address" required>
+                </div>
+                <div class="row">
+                  <div class="col-md-4">
+                    <label for="city">City</label>
+                    <input type="text" class="form-control" id="city" placeholder="Enter city" required>
+                  </div>
+                  <div class=" col-md-4">
+                    <label for="state">State</label>
+                    <input type="text" class="form-control" id="state" placeholder="Enter state" required>
+                  </div>
+                  <div class=" col-md-4">
+                    <label for="zip">Zip</label>
+                    <input type="text" class="form-control" id="zip" placeholder="Enter zip code" required>
+                  </div>
+                </div>
+                <hr>
+                <div class="row">
+                  <div class=" col-md-6 col-form-label">
+                    <label for="cardNumber">Card Number</label>
+                    <input type="text" class="form-control" id="cardNumber" placeholder="Enter card number" required>
+                  </div>
+                  <div class="col-md-6">
+                    <label for="expiryDate">Expiry Date</label>
+                    <input type="text" class="form-control" id="expiryDate" placeholder="MM/YY" required>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-6">
+                    <label for="cvv">CVV</label>
+                    <input type="text" class="form-control" id="cvv" placeholder="Enter CVV" required>
+                  </div>
+                </div>
+                <button type="submit" class="btn btn-primary mt-3">Confirm Booking</button>
+              </form>
+              <div id="confirmationMessage" style="display: none;">
+                <hr>
+                <h5>Booking Confirmed!</h5>
+                <p>We will email the information to your email address.</p>
+                <a href="f_search.html" class="btn btn-secondary">Done</a>
+              </div>
+        </div>
+      
+        <script>
+          // JavaScript to handle form submission and confirmation message
+          document.getElementById("bookingForm").addEventListener("submit", function(event) {
+            event.preventDefault();
+            // Simulate form submission
+            setTimeout(function() {
+              document.getElementById("bookingForm").reset();
+              document.getElementById("bookingForm").style.display = "none";
+              document.getElementById("confirmationMessage").style.display = "block";
+            }, 1000); // Simulating a delay for demonstration purposes
+          });
+          
+        </script>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+  <script>
+    const myModal = document.getElementById('myModal')
+const myInput = document.getElementById('myInput')
+
+myModal.addEventListener('shown.bs.modal', () => {
+  myInput.focus()
+})
+  </script>
+
 </body>
 </html>
