--- a/f_search.html
+++ b/f_search.html
@@ -230,37 +230,21 @@
               <form id="flightForm" class="mask mask-custom p-3">
                 <div class="col-form-label">
                   <label for="from"><i class="bi bi-luggage"></i> From:</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="from"
-                    placeholder="Enter origin"
-                    required
-                    list="datalistOptions"
-                  />
-                  <datalist id="datalistOptions">
-                    <option value="Jakarta">
-                    <option value="Kuala Lumpur">
-                    <option value="Singapore">
-                    <option value="Lamongan">
-                  </datalist>
+                  <select class="selectpicker form-control border-0 mb-1 rounded shadow">
+                    <option value="Jakarta">Jakarta</option>
+                    <option value="Lamongan">Lamongan</option>
+                    <option value="Kuala Lumpur">Kuala Lumpur</option>
+                    <option value="Singapore">Singapore</option>
+                </select>
                 </div>
                 <div class="col-form-label">
                   <label for="to"><i class="bi bi-geo-alt"></i> To:</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="to"
-                    placeholder="Enter destination"
-                    required
-                    list="datalistOptions"
-                  />
-                  <datalist id="datalistOptions">
-                    <option value="Jakarta">
-                    <option value="Kuala Lumpur">
-                    <option value="Singapore">
-                    <option value="Lamongan">
-                  </datalist>
+                  <select class="selectpicker form-control border-0 mb-1 rounded shadow">
+                    <option value="Singapore">Singapore</option>
+                    <option value="Lamongan">Lamongan</option>
+                    <option value="Kuala Lumpur">Kuala Lumpur</option>
+                    <option value="Jakarta">Jakarta</option>
+                </select>
                 </div>
                 <div class="col-form-label">
                   <label for="departure">Departure Date:</label>
