minor update to change f_search.html to index.html

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <a
                 class="nav-link active"
                 aria-current="page"
-                href="f_search.html"
+                href="index.html"
                 ><i class="bi bi-binoculars"></i> Search</a
               >
             </li>
