--- a/fresult.html
+++ b/fresult.html
@@ -32,7 +32,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-lg-0">
             <li class="nav-item ms-4">
-              <a class="nav-link" href="f_search.html"><i class="bi bi-binoculars"></i> Search</a>
+              <a class="nav-link" href="index.html"><i class="bi bi-binoculars"></i> Search</a>
             </li>
             <li class="nav-item ms-4">
               <a class="nav-link active" aria-current="page" href="fresult.html"><i class="bi bi-suitcase-lg"></i> Result</a>
